# griffr

./: .gitignore  AGENTS.md  Cargo.toml  README.md
crates/griffr-cli/: Cargo.toml
crates/griffr-cli/src/: main.rs  progress.rs  ui.rs
crates/griffr-cli/src/commands/: account.rs  archive_graph.rs  bootstrap.rs  debug.rs  info.rs  install.rs  launch.rs  local.rs  mod.rs  news.rs  predownload.rs  setup_vfs.rs  uninstall.rs  update.rs  verify.rs
crates/griffr-cli/src/commands/account/: bundle.rs  mod.rs  operations.rs  tests.rs
crates/griffr-cli/src/commands/debug/: mod.rs  remote_media.rs  remote_resources.rs  tests.rs  utils.rs  vfs_analysis.rs  vfs_snapshot.rs  vfs_snapshot_diff.rs  vfs_support.rs
crates/griffr-cli/src/commands/install/: mod.rs  run.rs  tests.rs  workflow.rs
crates/griffr-cli/src/commands/update/: archive_pipeline.rs  archives.rs  mod.rs  package_selection.rs  post_update.rs  reuse_update.rs  run.rs  tests.rs  verification_and_reuse.rs  workflow.rs
crates/griffr-cli/src/commands/update/tests/: archive_pipeline.rs  archives.rs  live_api.rs  package_selection.rs
crates/griffr-cli/src/main/: cli.rs  debug_cli.rs  entrypoint.rs
crates/griffr-cli/src/main/entrypoint/: account.rs  debug.rs  mod.rs  tests.rs
crates/griffr-cli/src/progress/: activity.rs  tests.rs
crates/griffr-common/: Cargo.toml
crates/griffr-common/src/: config.rs  error.rs  lib.rs
crates/griffr-common/src/api/: client.rs  crypto.rs  integration_tests.rs  mod.rs  protocol.rs  types.rs
crates/griffr-common/src/api/client/: mod.rs  models.rs  requests.rs  resources.rs
crates/griffr-common/src/api/integration_tests/: known_versions.rs
crates/griffr-common/src/api/types/: core.rs  mod.rs  resources.rs  tests.rs
crates/griffr-common/src/config/: api_identifiers.rs  catalog.rs  channel.rs  game.rs  mod.rs  profiles.rs  region.rs  target_resolution.rs  targets.rs
crates/griffr-common/src/download/: downloader.rs  extractor.rs  mod.rs
crates/griffr-common/src/download/extractor/: archive_index.rs  inspection.rs  mod.rs  range.rs  tests.rs
crates/griffr-common/src/download/extractor/extract/: index.rs  mod.rs  shards.rs
crates/griffr-common/src/download/extractor/layout/: mod.rs  stream.rs  volume.rs
crates/griffr-common/src/download/extractor/tests/: characterization.rs  format_check.rs  helpers.rs  unit.rs
crates/griffr-common/src/download/extractor/tests/characterization/: fixture.rs  sampling.rs
crates/griffr-common/src/download/extractor/tests/format_check/: fixture.rs  sample.rs  sampling.rs
crates/griffr-common/src/game/: admin.rs  files_reuse.rs  launcher.rs  manager.rs  mod.rs  server.rs  task_pool.rs  vfs.rs
crates/griffr-common/src/runtime/: admin.rs  compat_fs.rs  file_allocation.rs  install_plan.rs  integrity.rs  issues.rs  launcher.rs  launcher_metadata.rs  local_install.rs  manager.rs  mod.rs  patch_transaction.rs  paths.rs  progress.rs  server.rs  update_plan.rs
crates/griffr-common/src/runtime/files/: mod.rs  vfs.rs
crates/griffr-common/src/runtime/files/reuse/: ensure.rs  legacy.rs  materialize.rs  mod.rs  models.rs  plan.rs  sources.rs  test.rs  types.rs
crates/griffr-common/src/runtime/files/reuse/test/: mod.rs  planning_tests.rs  validation_tests.rs
crates/griffr-common/src/runtime/files/vfs/: bootstrap.rs  mod.rs  setup.rs  sync.rs
crates/griffr-common/src/runtime/launcher/: tests.rs
crates/griffr-common/src/runtime/manager/: integrity.rs  mod.rs  state_and_metadata.rs  tests.rs
crates/griffr-common/src/runtime/patch_apply/: build_plan.rs  dependency.rs  metadata.rs  mod.rs  plan.rs  plan_file.rs  recovery.rs  space.rs  space_use.rs  storage.rs
crates/griffr-common/src/runtime/patch_transaction/: build_plan.rs  dependency.rs  metadata.rs  mod.rs  model.rs  persistence.rs  plan.rs  plan_file.rs  planning.rs  recovery.rs  space.rs  space_model.rs  space_use.rs  storage.rs
crates/griffr-common/src/runtime/task_pool/: archive_plan.rs  download.rs  executor.rs  fs_ops.rs  graph.rs  mod.rs  scheduler.rs  test.rs  types.rs  verify.rs
crates/griffr-common/src/runtime/task_pool/executor/: archive.rs  mod.rs  transfer.rs
crates/griffr-common/src/runtime/task_pool/executor/archive/: commit.rs  complete.rs  extract.rs  fetch.rs  install.rs  patch.rs  save_volumes.rs
crates/griffr-common/src/runtime/task_pool/fs_ops/: delete_manifest.rs  extract.rs  mod.rs  path_safety.rs  reuse.rs
crates/griffr-common/src/runtime/task_pool/fs_ops/patch_manifest/: apply.rs  materialize.rs  mod.rs  transaction.rs
crates/griffr-common/src/runtime/task_pool/fs_ops/patch_manifest/apply_steps/: filesystem.rs  mod.rs  steps.rs  tests.rs
crates/griffr-common/src/runtime/task_pool/fs_ops/patch_manifest/transaction/: filesystem.rs  mod.rs  steps.rs  (+2 more)
crates/griffr-common/src/runtime/task_pool/fs_ops/reuse/: tests.rs
crates/griffr-common/src/runtime/task_pool/graph/: builder.rs  mod.rs  tests.rs
crates/griffr-common/src/runtime/task_pool/graph/exec/: expansion.rs  mod.rs  node_exec.rs
crates/griffr-common/src/runtime/task_pool/runner/: archive.rs  mod.rs  transfer.rs
crates/griffr-common/src/runtime/task_pool/runner/archive/: commit.rs  extract.rs  fetch.rs  install.rs  patch.rs  repair.rs  save_volumes.rs
crates/griffr-common/src/runtime/task_pool/scheduler/: metrics.rs  progress.rs  progress_tests.rs  queue.rs  routing.rs
crates/griffr-common/src/runtime/task_pool/scheduler/queue/: mod.rs  priority_queue.rs  resources.rs  tests.rs
crates/griffr-common/src/runtime/task_pool/test/: archive.rs  download.rs  mod.rs
crates/griffr-common/src/runtime/task_pool/types/: archive.rs  config.rs  events.rs  progress.rs  tasks.rs  tests.rs
crates/griffr-gui/: Cargo.toml
crates/griffr-gui/src/: lib.rs  main.rs
crates/griffr-gui/src/ui/: canvas_pool.rs  component.rs  container.rs  dispatch.rs  event.rs  layout.rs  mod.rs  resources.rs  runtime.rs  types.rs  widget.rs
crates/griffr-gui/src/ui/tile_plan/: compile.rs  merge.rs  mod.rs
crates/griffr-gui/src/widget/: banner.rs  button.rs  container.rs  counter.rs  gradient_container.rs  mod.rs
(+50 files in other folders)
