[package]
name = "griffr-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for Griffr game launcher"

[[bin]]
name = "griffr"
path = "src/main.rs"

[dependencies]
griffr-common = { workspace = true }

# Core
compio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { workspace = true }
indicatif = { workspace = true }

# Async utilities
futures-util = "0.3"

# Serialization
serde_json = "1.0"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.14"
zip = { workspace = true }
md-5 = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }
