[package]
name = "griffr-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
winio = { version = "0.11.0", features = ["win32"], default-features = false }
griffr-gui-macros = { path = "../griffr-gui-macros" }
rapidhash = { workspace = true }
bitflags = { workspace = true }
